# watchtower-old

./: .gitmodules  README.md  mosquitto.conf  requirements.txt  start_mosquitto_linux.sh  start_mosquitto_windows.bat  watchtower-production.sln  watchtower-prototype.sln
.devcontainer/: devcontainer.json
RPI gpio/: InstalationGuide.md  ReadMeRPI.md
RPI gpio/LoRaRPI/src/utility/: LoRa.cpp  LoRa.h  spiRPI.h
RPI gpio/SPI-example/src/: CMakeLists.txt  flash-led.cpp
include/: communication_layer.h  config_layer.h  sensor_layer.h  telemetry_layer.h
modules/lib-l6470/: CMakeLists.txt
modules/lib-l6470/include/: autodriver.h
modules/lib-l6470/src/: autodriver.cpp
src/: config_layer.cpp  data_storage.cpp  hardware_abstraction.cpp  main.cpp  mission_logic.cpp  sensor_layer.cpp  telemetry_layer.cpp
watchtower-app/: watchtower-app.pyproj
watchtower-production/: CMakeLists.txt  watchtower-production.vcxproj  watchtower-production.vcxproj.filters
watchtower-production-tests/: pch.cpp  pch.h  test.cpp  watchtower-production-tests.sln  watchtower-production-tests.vcxproj
watchtower-production/command_src/: mainCommand.cpp
watchtower-production/compute_src/: CMakeLists.txt  actuatorHandler.cpp  actuatorHandler.h  communicationLayer.cpp  communicationLayer.h  computeThreadingUtils.h  mainCompute.cpp  pipeHandler.cpp  processCommsHandler.cpp  threadHandler.cpp  threadHandler.h  threadHandlerOld.cpp  userInterfaceLayer.cpp
watchtower-production/console_src/: CMakeLists.txt  consoleThreadingUtils.h  mainConsole.cpp
watchtower-production/cpp_src/: CMakeLists.txt  actuatorHandler.cpp  actuatorHandler.h  communicationLayer.cpp  communicationLayer.h  main.cpp  threadHandler.cpp  threadHandler.h  threadHandlerOld.h
watchtower-production/include/: CommandLayer.h  communicationUtils.h  communication_layer.h  dataProcessingUtils.h  data_storage.h  hardware_abstraction.h  main.h  mission_logic.h  pipeHandler.h  test_functions.h  threadHandler.h  threadingUtils.h  userInterfaceLayer.h
watchtower-production/py_src/: backend.py  server.py
watchtower-production/shared_libraries/: watchtowerCommunicationUtils.h  watchtowerThreadingUtils.h
watchtower-production/src/: CMakeLists.txt  CommandLayer.cpp  communication_layer.cpp  example.cpp  main.cpp  mission_logic.cpp  sensor_layer.cpp  test_functions.cpp
watchtower-production/telemetry_src/: CMakeLists.txt  mainTelemetry.cpp  telemetryThreadingUtils.h
watchtower-production/test/: CMakeLists.txt  test_command.cpp  test_example.cpp  test_pipe_handler.cpp
watchtower-prototype/: antenna_tracking_test  antenna_tracking_test.cpp  communication_test.cpp  cv_test.cpp  interpolated_data.csv  main.cpp  motor_test.cpp  path_plotter.py  path_vtk_plotter.cpp  test_flight.csv  watchtower-prototype.vcxproj
watchtower-prototype/cpp_compile_test/: cpp_compile
watchtower-prototype/cpp_python_tests/: my_module.cpp  plot.py
watchtower-prototype/ipc_tests/: CMakeLists.txt  cpp_ipc_example.cpp  cpp_ipc_example_linux.cpp  python_ipc_example.py
watchtower-prototype/plotting_tests/: live_plot.ipynb  live_plot.py  tracking_evaluation.ipynb
watchtower-prototype/pybind_tests/: CMakeLists.txt  example.py  example.pyd  example.spec
watchtower-prototype/pybind_tests/src/: example.cpp
watchtower-prototype/telemetry_tests/: telemetry_generator.c  telemetry_processing_test.cpp  workbench  workbench.cpp
watchtower-sandbox/: communication_test.cpp  main.cpp  telemetry_processing_test.cpp  watchtower-prototype.vcxproj
watchtower-sandbox/plotting_tests/: sensor_analysis.ipynb  test_flight.csv
